tests/machine/x/ocaml/string_in_operator.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_in_operator.ml", line 22, characters 41-42:
22 |   print_endline (__show ((List.mem "cat" s)));
                                              ^
Error: This expression has type string but an expression was expected of type
         string list


Context (around line 22):
  20 | 
  21 | let () =
  22 |   print_endline (__show ((List.mem "cat" s)));
  23 |   print_endline (__show ((List.mem "dog" s)));
  24 | 
